--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <div class="greeting">Welcome to my Portfolio</div>
                 <h1>Hi, I'm <span>Sangya Sigdel</span></h1>
                 <h3>I'm a <span class="typing"></span></h3>
-                <p>Creative web developer turning ideas into interactive, user-friendly websites.Passionate about clean code, smart design, and continuous learning.</p>
+                <p>Aspiring IT Student turning ideas into impactful digital experiences with code, creativity, and curiosity.</p>
                 <div class="buttons">
                     <a href="#contact" class="btn hire-btn">Hire Me</a>
-                    <a href="file:///C:/Users/HP/OneDrive/Desktop/mine/SANGYA%20SIGDEL%20CV.pdf" target="_blank" class="btn cv-btn">Download CV</a>
+                    <a href="SANGYA SIGDEL CV.pdf" target="_blank" class="btn cv-btn">Download CV</a>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 <div class="about-grid">
                     <div class="image">
                         <div class="frame">
-                            <img src="sangya.jpg" alt="Sangya profile">
+                            <img src="sangyaa.png" alt="Sangya profile">
                         </div>
                     </div>
                     <div class="text">
@@ -78,13 +78,13 @@
                             <h4>Frontend Developer</h4>
                         </div>
                         <div class="about-description">
-                            <p>I specialize in creating responsive, user-friendly websites with modern technologies. My focus is on delivering clean, efficient code that provides an exceptional user experience.</p>
+                            <p>I'm Sangya Sigdel, a passionate and curious IT student with a strong interest in web development and user-focused design. I love turning ideas into interactive, functional websites using clean code and modern technologies. Beyond academics, I've worked on personal and team projects that challenged me to solve real-world problems through creative digital solutions. I'm eager to learn, grow, and contribute to innovative tech environments where I can build meaningful products and expand my skill set.</p>
                         </div>
                         <div class="info">
                             <div class="info-box"> 
                                 <div class="info-item">
                                     <i class="fas fa-calendar-alt"></i>
-                                    <p><span>Age:</span> 19</p>
+                                    <p><span>Age:</span> 20</p>
                                 </div>
                                 <div class="info-item">
                                     <i class="fas fa-phone"></i>
@@ -114,86 +114,83 @@
                                 </div>
                                 <div class="info-item">
                                     <i class="fas fa-graduation-cap"></i>
-                                    <p><span>Degree:</span> Bachelor's in Computer Science</p>
+                                    <p><span>Degree:</span> B.Sc.CSIT</p>
                                 </div>
                             </div>
                         </div>
                         <div class="about-cta">
-                            <a href="file:///C:/Users/HP/OneDrive/Desktop/mine/SANGYA%20SIGDEL%20CV.pdf" target="_blank" class="btn">Download CV</a>
+                            <a href="SANGYA SIGDEL CV.pdf" target="_blank" class="btn">Download CV</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <!-- Skills Section -->
     <section id="skills" class="skills">
+        <!-- Skills Section Background Animation -->
+        <div class="skills-background-animation">
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+            <div class="particle"></div>
+        </div>
+        
         <h2 class="heading">My <span>Skills</span></h2>
-        <div class="skills-container">
-            <div class="skills-content">
-                <div class="column">
-                    <h3>Technical Skills</h3>
-                    <div class="skill-box">
-                        <span>HTML</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 95%"></div>
-                        </div>
-                        <span class="percentage">95%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>CSS</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 85%"></div>
-                        </div>
-                        <span class="percentage">85%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>JavaScript</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 50%"></div>
-                        </div>
-                        <span class="percentage">50%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>PHP</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 5%"></div>
-                        </div>
-                        <span class="percentage">5%</span>
-                    </div>
-                </div>
-                <div class="column">
-                    <h3>Professional Skills</h3>
-                    <div class="skill-box">
-                        <span>Web Design</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 75%"></div>
-                        </div>
-                        <span class="percentage">75%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>UI/UX Design</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 80%"></div>
-                        </div>
-                        <span class="percentage">80%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>Responsive Design</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 70%"></div>
-                        </div>
-                        <span class="percentage">70%</span>
-                    </div>
-                    <div class="skill-box">
-                        <span>Problem Solving</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 85%"></div>
-                        </div>
-                        <span class="percentage">85%</span>
-                    </div>
-                </div>
+        <div class="skills-container-grid">
+            <div class="skill-card">
+                <i class="fas fa-code"></i>
+                <h3>Languages</h3>
+                <ul>
+                    <li>C / C++</li>
+                    <li>JavaScript</li>
+                    <li>SQL</li>
+                </ul>
+            </div>
+
+            <div class="skill-card">
+                <i class="fas fa-laptop-code"></i>
+                <h3>Web Technologies</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>WordPress</li>
+                </ul>
+            </div>
+
+            <div class="skill-card">
+                <i class="fas fa-tools"></i>
+                <h3>Tools</h3>
+                <ul>
+                    <li>Git & GitHub</li>
+                    <li>VS Code</li>
+                    <li>Figma</li>
+                    <li>Chrome DevTools</li>
+                </ul>
+            </div>
+
+            <div class="skill-card">
+                <i class="fas fa-user-check"></i>
+                <h3>Soft Skills</h3>
+                <ul>
+                    <li>Problem Solving</li>
+                    <li>Team Collaboration</li>
+                    <li>Time Management</li>
+                    <li>Adaptability</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -205,29 +202,74 @@
             <div class="project-box">
                 <img src="Portfolio Logo.jpg" alt="Project 1">
                 <div class="project-info">
-                    <h3>Personal Portfolio</h3>
+                    <h3>Portfolio</h3>
                     <p>Web Development</p>
                     <div class="project-tech">
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
                     </div>
-                    <a href="#index" class="btn">View Project</a>
+                    <a href="https://sangyaaa.github.io/portfolio/" class="btn">View Project</a>
                 </div>
             </div>
             <div class="project-box">
                 <img src="_Quiz Logo.jpg" alt="Project 2">
                 <div class="project-info">
                     <h3>Quiz App</h3>
-                    <p>App Development</p>
+                    <p>Web Development</p>
                     <div class="project-tech">
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
                     </div>
-                    <a href="#" class="btn">View Project</a>
+                    <a href="https://sangyaaa.github.io/quizlr/" class="btn">View Project</a>
                 </div>
             </div>
+             <div class="project-box">
+                <img src="todologo.png" alt="Project 3">
+                <div class="project-info">
+                    <h3>TO Web App</h3>
+                    <p>Web Development</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <a href="https://sangyaaa.github.io/todo/" class="btn">View Project</a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="ledger.png" alt="Project 4">
+                <div class="project-info">
+                    <h3>System Development</h3>
+                    <p>App development</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>Python</span>
+                        <span>Django</span>
+                        <span>MySql</span>
+                    </div>
+                    <a href="#" class="btn">Ongoing Project</a>
+                </div>
+            </div>
+            <div class="project-box">
+                <img src="feltsnflow.png" alt="Project 5">
+                <div class="project-info">
+                    <h3>E-commerce Website</h3>
+                    <p>Web Development</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>WordPress</span>
+                        <span>WooCommerce</span>
+                    </div>
+                    <a href="#" class="btn">Ongoing Project</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Contact Section -->
@@ -262,24 +304,24 @@
                     <div class="social-links">
                         <a href="https://github.com/sangyaaa"><i class="fab fa-github"></i></a>
                         <a href="https://www.instagram.com/san_gyaa/"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/sangya-sigdel/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="column form">
-                    <form action="#">
+                    <form action="https://formspree.io/f/xyzjrede" method="post">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" name="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message..." required></textarea>
+                            <textarea name="message" cols="30" rows="10" placeholder="Message..." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit" class="btn">Send Message</button>
