--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <img src="_Quiz Logo.jpg" alt="Project 2">
+                <img src="quiz Logo.jpg" alt="Project 2">
                 <div class="project-info">
                     <h3>Quiz App</h3>
                     <p>Web Development</p>
